--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,6 +19,7 @@
           >
           <a href="/getEMIDetails" class="index-button">Get EMI Details</a>
           <a href="/upcomingEMIs" class="index-button">Upcoming EMIs</a>
+          <a href="/completedEMIs" class="index-button">Completed EMIs</a>
         </center>
       </div>
       <%- include ('../partials/footer.html'); %>
